...

  final TabController tabController;
  final RaverThemeData theme;

  static const _tabNames = [
    'Info',
    'Lineup',
    'Timetable',
    'News',
    'Posts',
    'Ratings',
    'Sets',
  ];

...
